# LifeRSR

./: .env.example  .gitignore  CLAUDE.md  TODOS.md  pyproject.toml
docs/designs/: personal-knowledge-base.md
docs/gstack/: ceo-plan-2026-03-19.md  eng-review-test-plan-2026-03-19.md  office-hours-2026-03-19.md
src/: cli.py  distill.py  getnote.py  photo.py  staging.py  store.py  wechat.py
tests/: test_distill.py  test_getnote.py  test_integration.py  test_photo.py  test_staging.py  test_store.py  test_wechat.py
